--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Xcode
+\# Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
@@ -29,3 +29,5 @@ DerivedData/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
+# Local crap
+.DS_Store
