--- a/CP2020-Character-Sheet/Info.plist
+++ b/CP2020-Character-Sheet/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Cyberpunk 2020</string>
+	<string>CP2020</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
